docs/source/examples/421/out/out-03.txt

PLAY [Create SSL certificate.] *************************************************

TASK [Gathering Facts] *********************************************************
ok: [www-3]

TASK [Vars: Include OS vars] ***************************************************
included: vbotka.freebsd.lib for www-3

TASK [vbotka.freebsd.lib : Al_include_os_vars_path_incr: vars from /scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/vars/defaults] ***
ok: [www-3] => (item=/scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/vars/defaults/default.yml)
ok: [www-3] => (item=/scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/vars/defaults/FreeBSD.yml)

TASK [vbotka.freebsd.lib : Al_include_os_vars_path_incr: vars from /scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/vars] ***
ok: [www-3] => (item=/scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/vars/defaults.yml)

TASK [vbotka.freebsd.certificate : Vars: Add certificate_data_simple to certificate_data] ***
ok: [www-3]

TASK [vbotka.freebsd.certificate : Packages: Install FreeBSD packages] *********
ok: [www-3] => (item=security/py-cryptography)
FAILED - RETRYING: [www-3]: Packages: Install FreeBSD packages (10 retries left).
FAILED - RETRYING: [www-3]: Packages: Install FreeBSD packages (9 retries left).
FAILED - RETRYING: [www-3]: Packages: Install FreeBSD packages (8 retries left).
FAILED - RETRYING: [www-3]: Packages: Install FreeBSD packages (7 retries left).
FAILED - RETRYING: [www-3]: Packages: Install FreeBSD packages (6 retries left).
FAILED - RETRYING: [www-3]: Packages: Install FreeBSD packages (5 retries left).
FAILED - RETRYING: [www-3]: Packages: Install FreeBSD packages (4 retries left).
FAILED - RETRYING: [www-3]: Packages: Install FreeBSD packages (3 retries left).
FAILED - RETRYING: [www-3]: Packages: Install FreeBSD packages (2 retries left).
FAILED - RETRYING: [www-3]: Packages: Install FreeBSD packages (1 retries left).
[ERROR]: Task failed: Module failed: failed to install security/py-openssl
Origin: /scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/tasks/pkg.yml:8:7

6   block:
7
8     - name: "Packages: Install FreeBSD packages"
        ^ column 7

failed: [www-3] (item=security/py-openssl) => 
    ansible_loop_var: item
    attempts: 10
    changed: false
    item: security/py-openssl
    msg: failed to install security/py-openssl
    stderr: |-
        pkg: No packages available to install matching 'security/py-openssl' have been found in the repositories
    stderr_lines: <omitted>
    stdout: |-
        Updating FreeBSD-ports repository catalogue...
        FreeBSD-ports repository is up to date.
        Updating FreeBSD-ports-kmods repository catalogue...
        FreeBSD-ports-kmods repository is up to date.
        All repositories are up to date.
    stdout_lines: <omitted>
changed: [www-3] => (item=security/py-acme)
changed: [www-3] => (item=security/py-acme-tiny)

TASK [vbotka.freebsd.certificate : Packages: Rescue FreeBSD packages] **********
[ERROR]: Task failed: Finalization of task args for 'ansible.builtin.fail' failed: Error while resolving value for 'msg': 'item' is undefined

Task failed.
Origin: /scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/tasks/pkg.yml:24:7

22
23   rescue:
24     - name: "Packages: Rescue FreeBSD packages"
         ^ column 7

<<< caused by >>>

Finalization of task args for 'ansible.builtin.fail' failed.
Origin: /scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/tasks/pkg.yml:25:7

23   rescue:
24     - name: "Packages: Rescue FreeBSD packages"
25       ansible.builtin.fail:
         ^ column 7

<<< caused by >>>

Error while resolving value for 'msg'.
Origin: /scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/tasks/pkg.yml:26:14

24     - name: "Packages: Rescue FreeBSD packages"
25       ansible.builtin.fail:
26         msg: |
                ^ column 14

<<< caused by >>>

'item' is undefined
Origin: /scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/tasks/pkg.yml:10:15

 8     - name: "Packages: Install FreeBSD packages"
 9       community.general.pkgng:
10         name: "{{ item }}"
                 ^ column 15

fatal: [www-3]: FAILED! => 
    changed: false
    msg: 'Task failed: Finalization of task args for ''ansible.builtin.fail'' failed:
        Error while resolving value for ''msg'': ''item'' is undefined'

PLAY RECAP *********************************************************************
www-3                      : ok=5    changed=0    unreachable=0    failed=1    skipped=6    rescued=1    ignored=0   

